--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <title>TD-ACADEMY</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Amiram Academy</title>
   </head>
   <body>
     <div id="root"></div>
