--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;500;600;700&display=swap"
       rel="stylesheet"
+      crossorigin="anonymous"
     />
     <title>Amiram Academy</title>
   </head>
   <body>
     <div id="root"></div>
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
+    <!-- GPT Engineer script removed - was empty and unnecessary for security -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
