שינויים מקומיים שלי

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="אקדמיית אמירם - הכנה מתקדמת למבחן אמירם עם סימולציות אמיתיות, הכנה מותאמת אישית ותרגול מאסיבי. הצליחו במבחן בקלות עם המערכת המובילה בישראל." />
+    <meta name="keywords" content="אמירם, מבחן אמירם, הכנה למבחן, סימולציות, הבנת הנקרא, כמותי, לוגי" />
+    <meta name="author" content="Amiram Academy" />
+    <meta property="og:title" content="Amiram Academy - הכנה חכמה למבחן אמירם" />
+    <meta property="og:description" content="המערכת המובילה להכנה למבחן אמירם - סימולציות מתקדמות, הכנה מותאמת אישית ותוצאות מוכחות" />
+    <meta property="og:type" content="website" />
     <link
       href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;500;600;700&display=swap"
       rel="stylesheet"
