--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html lang="he" dir="rtl">
   <head>
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-M95H8KJP');</script>
+    <script>
+      // Get GTM ID from environment or use fallback
+      (function(w,d,s,l,i){
+        // Use environment variable or fallback
+        var gtmId = '%VITE_GTM_ID%' || 'GTM-M95H8KJP';
+        if (gtmId.startsWith('%VITE_GTM_ID')) {
+          gtmId = 'GTM-M95H8KJP'; // Fallback if env var not replaced
+        }
+        
+        w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+gtmId+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer');
+    </script>
     <!-- End Google Tag Manager -->
     
     <meta charset="UTF-8" />
